# Inline-Core

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  webui.sh
scripts/: reference.py
src/inline_core/: __init__.py  config.py  errors.py  media.py  takes.py
src/inline_core/components/: __init__.py  conditioning.py  interfaces.py
src/inline_core/device/: __init__.py  auto.py  detect.py  memory.py  policy.py  types.py
src/inline_core/graph/: __init__.py  cache.py  descriptor.py  executor.py  primitives.py  registry.py  runners.py  schema.py  topo.py  validate.py
src/inline_core/importer/: __init__.py  comfy.py
src/inline_core/models/: __init__.py  catalog.py
src/inline_core/models/zimage/: __init__.py  runner.py
src/inline_core/parallel/: __init__.py  config.py  group.py  launch.py  protocol.py  registry.py  worker.py
src/inline_core/runtime/: __init__.py  context.py  file_store.py  progress.py  run.py  store.py
src/inline_core/sampling/: __init__.py  batch.py
src/inline_core/server/: __init__.py  __main__.py  app.py  assets.py  bootstrap.py  frontend.py  manager.py  rpc.py  run_store.py  serialize.py
src/inline_core/studio/: __init__.py  assets.py  config.py  fal.py  frames.py  generation.py  graph_build.py  handlers.py  moodboard.py  schema.py  store.py
src/inline_core/studio/timeline/: __init__.py  compose.py  ffmpeg.py  render.py  resolve.py
tests/: helpers.py  test_cache.py  test_catalog.py  test_comfy_import.py  test_config.py  test_executor.py  test_file_store.py  test_frontend_serving.py  test_hidden_nodes.py  test_memory_policy.py  test_parallel_group.py  test_primitives.py  test_rpc_bridge.py  test_run_store.py  test_schema.py  test_server.py  test_studio_assets.py  test_studio_fal.py  test_studio_frames.py  test_studio_generation.py  test_studio_moodboard.py  test_studio_rpc.py  test_studio_schema.py  test_studio_store.py  test_studio_timeline.py  test_take_bytes.py  test_topo.py  test_validate.py  test_xfuser_sampler.py  test_zimage_resolve.py  test_zimage_runner.py
