[project]
name = "inline-core"
version = "0.0.0"
description = "The generation engine behind Inline."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "psutil>=5.9",
]

[project.optional-dependencies]
# Model-runtime deps land with the component implementations. The installer selects the right
# torch wheel per OS and accelerator (see PLAN.md, cross-platform). Kept out of the core env so
# the engine skeleton stays light and portable to review.
zimage = [
  "torch>=2.2",
  # Z-Image landed in diffusers 0.36 (ZImagePipeline); diffusers from git main may be required.
  "diffusers>=0.36",
  "transformers>=4.44",
  "accelerate>=0.30",
  "safetensors>=0.4",
]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  # Bundled ffmpeg binary for the Studio timeline render (director preview/export). ffprobe is not
  # bundled — install a system ffmpeg for duration probing, else clips fall back to a still length.
  "imageio-ffmpeg>=0.4",
]
# Multi-GPU denoise: split one image across GPUs via xDiT (xfuser). Isolated in the worker group so
# the core env is unaffected. torchrun ships with torch (from zimage); nvidia-ml-py detects NVLink so
# the policy picks Ulysses vs PipeFusion. flash-attn (Ulysses/Ring on NVLink) is an opt-in extra.
parallel = [
  "inline-core[zimage]",
  "xfuser>=0.4",
  "nvidia-ml-py>=12",
]
dev = [
  "inline-core[server]",
  "pytest>=8",
  "ruff>=0.6",
  "pyright>=1.1",
  "httpx>=0.27",
]

[project.scripts]
# One command to run the engine + the Inline Studio UI on one port (see main.py for flags).
inline-studio = "inline_core.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inline_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
